<?xml version="1.0"?>
<package>
  <name>ORB_SLAM2</name>
  <version>1.0.0</version>
<description>looool</description>
  <maintainer email="bobes131@gmail.com">Filip</maintainer>
  <author>Filip</author>
  <license>CTU</license>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
	 <build_type>cmake</build_type>
  </export>
</package>
